[regression][bisected] AMDGPU rejects Tahiti GPUs in 5.16
Brief summary of the problem:
AMDGPU rejects Tahiti devices in amdgpu_pci_probe
with the log message Unsupported asic. Remove me when IP discovery init is in place.
This happens because CHIP_TAHITI
of the amd_asic_type
enum (defined in include/drm/amd_asic_type.h
) is 0 and the check in amdgpu_pci_probe
assumes that a driver_data field containing 0 means that the device is unsupported.
The bug could probably be resolved by either setting CHIP_TAHITI = 1
in amd_asic_type.h
or by using a driver_data field of -1 to flag unsupported devices (see the commit below).
This faulty check was added in eb4fd29afd4aa1c98d882800ceeee7d1f5262803.
Hardware description:
- CPU: Intel Core i5-3570K
- GPU: AMD Tahiti XT (R9 280X) [1002:6798]
System information:
- Distro name and Version: Arch Linux
- Kernel version: Linux 5.16.0-arch1-1 #1 (closed) SMP PREEMPT Mon, 10 Jan 2022 20:11:47 +0000 x86_64
How to reproduce the issue:
- Boot with an AMD Tahiti GPU and kernel cmdline
radeon.si_support=0 amdgpu.si_support=1